fixed order login button alignment stuff

--- a/src/components/LoginRegisterForm/LoginRegisterForm.css
+++ b/src/components/LoginRegisterForm/LoginRegisterForm.css
@@ -1,16 +1,15 @@
 .checkoutLogRegBtn {
-    display: inline-block;
+    display: block;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 25%;
-    margin-right: 25%;
-    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
     color: #000;
     padding: 9px 15px;
     background-color: #feaf17;
     border-radius: 7px;
     font-family: Poppins, sans-serif;
     font-weight: 600;
-    text-decoration: none;
     border: 0px;
 }
