--- a/src/components/OrderPage/OrderPage.css
+++ b/src/components/OrderPage/OrderPage.css
@@ -1,10 +1,10 @@
 .orderPageContainer {
+    padding: 0px 75px 0px 75px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 80vh;
     background-color: #fff4df;
 }
 
@@ -47,14 +47,15 @@
 }
 
 .orderCheckoutButton {
+    display: block;
     background-color: #feaf17;
     border: 1px solid #000;
     border-radius: 13px;
     font-family: Poppins, sans-serif;
     font-weight: 600;
     margin-top: 27px;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
     padding: 9px 15px;
 }
